use css rule to add background images

--- a/index.html
+++ b/index.html
@@ -93,21 +93,20 @@
       <div class="img">
         <img src="ip2/assets/drink1.jpg" alt="">
         <img src="ip2/assets/drink2.jpg" alt="">
+      </div>
+    </div>
+  </div>
+    </div>
+  </div>
+  <div class="row4">
+    <div class="container">
+      <div class=col-md-3>
+        <hi>chicken burger</hi>
 
       </div>
 
-    </div>
 
-
-  </div>
-
-
-    </div>
-
-
-  </div>
-  <div class="row4">
-    <div class="col-md-12">
+      </div>
 
 
     </div>
