--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         <hi>chicken burger</hi>
 
       </div>
+      <div class="col-md-3">
+        <h1>Beef Burger</h1>
+
+      </div>
 
 
       </div>
