--- a/index.html
+++ b/index.html
@@ -100,12 +100,27 @@
   </div>
   <div class="row4">
     <div class="container">
-      <div class=col-md-3>
-        <hi>chicken burger</hi>
+      <div class="col-md-4">
+        <img src="ip2\assets\fastfood\chickenBurger.jpg" />
+        <div class="chakula">
+          <h1>Chicken Burger</h1>
+        </div>
+
 
       </div>
-      <div class="col-md-3">
-        <h1>Beef Burger</h1>
+      <div class="col-md-4">
+        <img src="ip2\assets\fastfood\beefBurger.jpg" />
+        <div class="chakula">
+          <h1>Beef Burger</h1>
+        </div>
+
+
+      </div>
+      <div class="col-md-4">
+        <img src="ip2\assets\fastfood\chickenPizza.jpg" />
+        <div class="chakula">
+        <h1>Chicken Pizza</h1>
+        </div>
 
       </div>
 
