use css rule to add border to row

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           esse cillum dolore eu fugiat nulla pariatur.Exce
           teur sint occaecat cupi datat non proident.</P>
           <div class="button">
-            <button type="button" name="button">view gallery-></button>
+            <button type="button" name="button">VIEW GALLERY-></button>
           </div>
 
     </div>
@@ -84,7 +84,10 @@
         aut irure dolor in re prehenderit in voluptate velit
         esse cillum dolore eu fugiat nulla pariatur.Exce
         teur sint occaecat cupi datat non proident.</p>
-        <button type="button" name="button">view gallery-></button>
+        <div class="button">
+            <button type="button" name="button">VIEW GALLERY-></button>
+        </div>
+
   </div>
   </div>
 
@@ -98,6 +101,7 @@
   </div>
     </div>
   </div>
+
   <div class="row4">
     <div class="container">
       <div class="col-md-4">
@@ -121,14 +125,39 @@
         <div class="chakula">
         <h1>Chicken Pizza</h1>
         </div>
-
       </div>
-
-
-      </div>
-
-
     </div>
+ </div>
+
+ <div class="row5">
+   <div class="container5">
+     <div class="col-md-8">
+       <div class="Eagle">
+         <div class="heading">
+            <h1>Our Happy Customers</h1>
+         </div>
+            <h2>George Richard</h2>
+            <p>
+              Great food! Menu is awesome their foods are not only great but
+              also in the right place. I'll highly recommend them.
+            </p>
+
+       </div>
+
+
+     </div>
+     <div class="col-md-4">
+       <div>
+         <h1>hello</h1>
+       </div>
+
+
+     </div>
+
+
+   </div>
+
+ </div>
 
   </div>
 
