add a border to images

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
   </div>
   <div class="row3">
-    <div class="col-md-6"
+    <div class="col-md-6">
     <div class="text2">
       <h1>Drinks</h1>
       <h2>We also produce delicious drinks</h2>
@@ -139,27 +139,65 @@
             <h2>George Richard</h2>
             <p>
               Great food! Menu is awesome their foods are not only great but
-              also in the right place. I'll highly recommend them.
+              also in the right place.</p>
+            <p>
+              I'll highly recommend them.
             </p>
-
+             <img src="ip2\assets\customers\p1.png" />
+             <img src="ip2\assets\customers\p2.png" />
+             <img src="ip2\assets\customers\p3.png" />
        </div>
 
 
      </div>
      <div class="col-md-4">
-       <div>
-         <h1>hello</h1>
+       <div class="Eagle2">
+         <div class="heading2">
+          <h1>About Menu</h1>
+         </div>
+         <p>
+           Lorem ipsum dolor sit amet consectetur adipisic
+             ing elit sed do euismod tempor incididunt ut
+             labore et dolore magna aliqua. Ut elim ad minim
+             veniam quis nostrid exercitation ullamco laboris
+             nisi ut aliquip ex ea commondo consequat. Duis
+             aut irure dolor in re prehenderit in voluptate velit
+             esse cillum dolore eu fugiat nulla pariatur.Exce
+             teur sint occaecat cupi datat non proident.
+         </p>
        </div>
-
-
      </div>
-
-
    </div>
-
  </div>
 
-  </div>
+   <div class="col-md-12">
+     <div class="container">
+       <div class="email">
+         <h1>Get our daily food items delivered to your email</h1>
+       </div>
+     </div>
+   </div>
+
+
+      <div class="col-md-10">
+          <div>
+            <footer>
+             <img src="ip2\assets\footerlogos\logo_white.png" />
+             <h1>MENU</h1>
+             <h2>Thats what we are</h2>
+             <!--ip2\assets\footerlogos\logo_white.png-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+            </footer>
+          </div>
+      </div>
+
+
+
+
+
+
+
 
 
   </body>
